Add github and gitter links to website

--- a/source/index.html
+++ b/source/index.html
@@ -15,6 +15,16 @@
   <!-- Default Stylesheet -->
   <link href="assets/css/app.css" rel="stylesheet" type="text/css" />
 
+  <!-- Place this tag in your head or just before your close body tag. -->
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+  <script>
+    ((window.gitter = {}).chat = {}).options = {
+      room: 'Security-Token-Standard/lobby'
+    };
+  </script>
+  <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
 </head>
 
 <body>
@@ -29,6 +39,9 @@
         <div id="intro-header-text">
           <h1 id="intro-header">SECURITY TOKEN STANDARD</h1>
         </div>
+        <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/securitytokenstandard" data-size="large" aria-label="Follow @securitytokenstandard on GitHub">Follow @securitytokenstandard</a>
+
       </div>
     </div>
 
