Fix footer links

--- a/source/index.html
+++ b/source/index.html
@@ -29,12 +29,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124524222-1"></script>
   <script>
     var host = window.location.hostname;
-    if(host != "localhost")
-    {
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-124524222-1');
+    if (host != "localhost") {
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'UA-124524222-1');
     } 
   </script>
 
@@ -53,7 +52,8 @@
           <h1 id="intro-header">SECURITY TOKEN STANDARD</h1>
         </div>
         <!-- Place this tag where you want the button to render. -->
-        <a class="github-button" href="https://github.com/securitytokenstandard" data-size="large" aria-label="Follow @securitytokenstandard on GitHub">Follow @securitytokenstandard</a>
+        <a class="github-button" href="https://github.com/securitytokenstandard" data-size="large" aria-label="Follow @securitytokenstandard on GitHub">Follow
+          @securitytokenstandard</a>
 
       </div>
     </div>
@@ -66,7 +66,10 @@
     <div class="container has-text-centered">
       <div class="section-header-text">
         <h3 class="section-subheader">What is a Security Token?</h3>
-        <p class="section-text">A Security Token shares many of the characteristics of both fungible (erc20) and non-fungible tokens (erc721). Security tokens are designed to represent complete or fractional ownership interests in assets and/or entities. While most tokens have no limitations on who can receive, or participate in the token sale, the security tokens offerings restrict token transfers to verified investors only.
+        <p class="section-text">A Security Token shares many of the characteristics of both fungible (erc20) and non-fungible
+          tokens (erc721). Security tokens are designed to represent complete or fractional ownership interests in assets
+          and/or entities. While most tokens have no limitations on who can receive, or participate in the token sale, the
+          security tokens offerings restrict token transfers to verified investors only.
         </p>
       </div>
       <!-- /.section-header-text -->
@@ -82,10 +85,19 @@
 
       <div class="section-header-text">
         <h3 class="section-subheader">How do they differ from utility tokens?</h3>
-        <p class="section-text">The concept of utility tokens is fairly well understood in the blockchain space today. Utility tokens represent access to a network, and your token purchase represents the ability to buy goods or services from that network — kind of like an arcade token being used to play a game without owning it. Utility tokens give you that same type of access but just to a product or service.</p>
-        <p class="section-text">On the other hand, security tokens represent complete or fractional ownership in an asset (such as shares in a company, parts of a real-estate asset, artwork, etc). Having a stake in a company, real estate, or intellectual property can all be represented by security tokens. Security tokens offer the benefit of bringing significant transparency over traditional paper shares through the use of the blockchain and its associated public ledger. Security token structure, distribution, or changes that could affect investors are now accessible to all via the blockchain.</p>
+        <p class="section-text">The concept of utility tokens is fairly well understood in the blockchain space today. Utility
+          tokens represent access to a network, and your token purchase represents the ability to buy goods or services from
+          that network — kind of like an arcade token being used to play a game without owning it. Utility tokens give you
+          that same type of access but just to a product or service.</p>
+        <p class="section-text">On the other hand, security tokens represent complete or fractional ownership in an asset
+          (such as shares in a company, parts of a real-estate asset, artwork, etc). Having a stake in a company, real estate,
+          or intellectual property can all be represented by security tokens. Security tokens offer the benefit of bringing
+          significant transparency over traditional paper shares through the use of the blockchain and its associated public
+          ledger. Security token structure, distribution, or changes that could affect investors are now accessible to all
+          via the blockchain.</p>
 
-        <p class="section-text"> In short, security tokens give the holder an ownership right and potential access to additional benefits such as dividends, voting rights and other benefits that can be provided by the issuer.
+        <p class="section-text"> In short, security tokens give the holder an ownership right and potential access to additional
+          benefits such as dividends, voting rights and other benefits that can be provided by the issuer.
         </p>
       </div>
 
@@ -97,11 +109,16 @@
 
       <div class="section-header-text">
         <h3 class="section-subheader">STO vs ICO?</h3>
-        <p class="section-text">An Initial Coin Offering (ICO) is an unregulated method to raise funds for a new blockchain, cryptocurrency, or utility token project. In an ICO, a percentage of the cryptocurrency or utility token is sold to early backers of the project in exchange for fiat or other cryptocurrencies.</p>
+        <p class="section-text">An Initial Coin Offering (ICO) is an unregulated method to raise funds for a new blockchain,
+          cryptocurrency, or utility token project. In an ICO, a percentage of the cryptocurrency or utility token is sold
+          to early backers of the project in exchange for fiat or other cryptocurrencies.</p>
 
-        <p class="section-text">An STO is a regulated method to raise funds. Security Tokens are backed by assets (such as a company, real estate, artwork, or shares in a fund).</p>
+        <p class="section-text">An STO is a regulated method to raise funds. Security Tokens are backed by assets (such as
+          a company, real estate, artwork, or shares in a fund).</p>
 
-        <p class="section-text">With that being said, the value of a security token can increase or decrease on the basis of the perceived value of the asset.  STOs and Securities provides access to assets that were otherwise not accessible. Forms of ownership are receiving an upgrade from pieces of paper to blockchain-based tokens.
+        <p class="section-text">With that being said, the value of a security token can increase or decrease on the basis
+          of the perceived value of the asset. STOs and Securities provides access to assets that were otherwise not accessible.
+          Forms of ownership are receiving an upgrade from pieces of paper to blockchain-based tokens.
         </p>
       </div>
 
@@ -113,7 +130,8 @@
 
       <div class="section-header-text">
         <h3 class="section-subheader">WITHOUT A STANDARD</h3>
-        <p class="section-text">Security Tokens will never be adopted in any meaningful way if issuers, investors, KYC providers, wallets, exchanges, regulators and developers cannot work together within the same framework.
+        <p class="section-text">Security Tokens will never be adopted in any meaningful way if issuers, investors, KYC providers,
+          wallets, exchanges, regulators and developers cannot work together within the same framework.
         </p>
       </div>
       <!-- /.section-header-text -->
@@ -135,7 +153,10 @@
 
       <div class="section-header-text">
         <h3 class="section-subheader">WITH A STANDARD</h3>
-        <p class="section-text">Security Tokens can become the default form for all financial securities. In the same way that the ERC-20 standard helped to create the boom in utility tokens, the Security Token standard will help create the boom in security tokens. All participants in the ecosystem will be able to speak the same language and become confident building on this new and exciting technology.
+        <p class="section-text">Security Tokens can become the default form for all financial securities. In the same way
+          that the ERC-20 standard helped to create the boom in utility tokens, the Security Token standard will help create
+          the boom in security tokens. All participants in the ecosystem will be able to speak the same language and become
+          confident building on this new and exciting technology.
         </p>
       </div>
       <!-- /.section-header-text -->
@@ -155,8 +176,12 @@
       <div class="section-header-text">
         <h3 class="section-subheader">SECURITY TOKEN ROUNDTABLE</h3>
         <p class="section-text">
-          The Security Token Roundtable was held to drive forward the conversation around technical, legal & regulatory opportunities and challenges associated with issuing, lifecycle events and the trading of securities on public ledgers. Building standards in this space provides the bedrock needed to ramp up adoption and establish regulatory compliance in this massive, brand new use-case for blockchain based public ledgers.
-          <a href="https://blog.polymath.network/security-token-roundtable-recap-30e7d371cf14" target="_blank">Click here to read more</a>
+          The Security Token Roundtable was held to drive forward the conversation around technical, legal & regulatory opportunities
+          and challenges associated with issuing, lifecycle events and the trading of securities on public ledgers. Building
+          standards in this space provides the bedrock needed to ramp up adoption and establish regulatory compliance in
+          this massive, brand new use-case for blockchain based public ledgers.
+          <a href="https://blog.polymath.network/security-token-roundtable-recap-30e7d371cf14" target="_blank">Click here
+            to read more</a>
         </p>
         <div class="video-container">
           <iframe src="https://player.vimeo.com/video/281140093" width="640" height="360" frameborder="0" allowfullscreen></iframe>
@@ -178,7 +203,8 @@
     <div class="container has-text-centered">
       <div class="section-header-text">
         <h3 class="section-subheader">The Security Token Interface</h3>
-        <p class="section-text">A backwards-compatible extension of ERC-20 to bring the multi-trillion dollar securities market to the blockchain.
+        <p class="section-text">A backwards-compatible extension of ERC-20 to bring the multi-trillion dollar securities
+          market to the blockchain.
         </p>
       </div>
       <!-- /.section-header-text -->
@@ -213,8 +239,9 @@
           <a href="https://github.com/pabloruiz55">@pabloruiz55</a>, and more at the
           <a href="https://stroundtable.com">Security Token Roundtable</a>
           <br/>
-          <br/>
-          This Security Token Standard has since moved out of beta and into a community formalized v1 spec, supported and endorsed by a large number of projects from across the crypto ecosystem and traditional security market participants. This EIP wouldn't be possible without the time and dedication from a number of community members.
+          <br/> This Security Token Standard has since moved out of beta and into a community formalized v1 spec, supported
+          and endorsed by a large number of projects from across the crypto ecosystem and traditional security market participants.
+          This EIP wouldn't be possible without the time and dedication from a number of community members.
         </p>
       </div>
       <!-- /.section-header-text -->
@@ -232,7 +259,7 @@
       <!-- /.section-header-text -->
       <div id="supporters-columns" class="columns">
         <div class="column">
-          <a href="http://www.0xproject.com">
+          <a href="https://www.polymath.network">
             <div class=" glitch supporter">
               <img src="assets/img/bull.png" />
             </div>
@@ -240,7 +267,7 @@
           <h4>Polymath</h4>
         </div>
         <div class="column">
-          <a href="http://www.toshi.org/">
+          <a href="https://www.perkinscoie.com/">
             <div class=" glitch supporter">
               <img src="assets/img/perkins.png" />
             </div>
